# My-Own-DataBase

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  AGENT_USAGE.md  CLAUDE.md  README.md  TASK_MEMORY.md
backend_api/: README.md
backend_api/app/: main.py
common/schemas/: agent_workflow_reference.schema.json  automation_reference.schema.json  backend_reference.schema.json  code_asset.schema.json  ui_asset.schema.json  ui_reference.schema.json
common/taxonomy/: agent_workflow_types.json  automation_types.json  code_asset_categories.json  ui_page_types.json
common/templates/: agent_workflow_reference.template.json  automation_reference.template.json  ui_reference.template.json
docs/reports/: api_domain_capability_boundary.md  graph_upgrade_result.md  high_value_isolated_nodes.md  index.md  isolated_node_connection_report.md  markdown_format_and_playbook_fix_report.md  obsidian_graph_audit.md  playbook_gap_report.md  prompt_curation_index_patch_report.md  second_brain_eval_plan.md
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/: .gitignore  Makefile  README.md  pyproject.toml
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/.github/workflows/: pypi.yml  tests.yml
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/docs/: future-improvements.md
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/examples/: README.md  basic.py  haystack_chat.py  responses_basic.py  responses_basic_client.py  responses_with_files.py  responses_with_files_client.py
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/src/fastapi_openai_compat/: __init__.py  _async_utils.py  _shared.py  models.py  models_router.py  router.py  streaming.py
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/src/fastapi_openai_compat/chat_completions/: __init__.py  models.py  router.py  streaming.py
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/src/fastapi_openai_compat/files/: __init__.py  models.py  router.py
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/src/fastapi_openai_compat/responses/: Untitled  __init__.py  models.py  router.py  streaming.py
domains/backend/raw/github_projects/ai_backend/fastapi-openai-compat/tests/: conftest.py  test_chat_exports.py  test_files_exports.py  test_files_integration.py  test_integration.py  test_models.py  test_openai_client.py  test_responses_exports.py  test_responses_integration.py  test_responses_models.py  test_responses_module_layout.py  test_responses_openai_client.py  test_responses_streaming.py  test_streaming.py
evals/: README.md
scripts/: brief.py
wiki/: hot.md  index.md  log.md
(+1153 files in other folders)
